--- a/codebook/tpw_references.bib
+++ b/codebook/tpw_references.bib
@@ -33,6 +33,18 @@
 }
 
 
+# Subjective SES Articles 
+@article{adler1994socioeconomic,
+  title={Socioeconomic status and health: the challenge of the gradient.},
+  author={Adler, Nancy E and Boyce, Thomas and Chesney, Margaret A and Cohen, Sheldon and Folkman, Susan and Kahn, Robert L and Syme, S Leonard},
+  journal={American psychologist},
+  volume={49},
+  number={1},
+  pages={15},
+  year={1994},
+  publisher={American Psychological Association}
+}
+
 
 # BSI Articles
 
