--- a/codebook/RMD_codebook_draft_ST.Rmd
+++ b/codebook/RMD_codebook_draft_ST.Rmd
@@ -2329,162 +2329,6 @@ bcap_tbl_binary <- bcap_summary_data_binary %>%
 bcap_tbl_binary
 ```
 
-For continuous total and subscale scores:
-
-```{r bcap-mean-items}
-# Create subset of bcap items
-bcap_data_subset <- complete %>%
-  select(
-    bcap_risk, bcap_happy, bcap_feel_pers, bcap_lonely, bcap_fam_conf, bcap_rigid, bcap_distress, bcap_poverty, bcap_lie, bcap_random)
-
-# Calculate the summary statistics for each variable
-bcap_summary_data <- lapply(bcap_data_subset, function(x) {
-  mean_val <- sprintf("%.2f", round(mean(x, na.rm = TRUE), 2))
-  sd_val <- round(sd(x, na.rm = TRUE), 2)
-  range_val <- paste(min(x, na.rm = TRUE), max(x, na.rm = TRUE), sep = "-")
-  miss_val <- round(mean(is.na(x)) * 100, 2)
-  c(Mean = mean_val, SD = sd_val, Range = range_val, Missing = paste(miss_val, "%", sep = ""))
-})
-
-# Convert summary_data to a data frame
-bcap_summary_data <- as.data.frame(bcap_summary_data)
-
-# Set items as first row
-bcap_summary_data <- rbind(names(bcap_summary_data), bcap_summary_data) %>% 
-  t() %>% 
-  as.data.frame()
-
-# Create the gt table
-bcap_tbl <- bcap_summary_data %>%
-  gt() %>%
-  cols_label(`1` = "Variable",
-             Range = "Range*",
-             Missing = "% Missing") %>% 
-  cols_width(1 ~ px(165),2:5 ~ px(115)) %>%
-    tab_options(table.width = pct(100))%>%
-  cols_align(columns = c("Mean", "SD", "Range", "Missing"), align = "center") %>% 
-  tab_footnote("*Range of data values") %>% 
-  tab_options(table.border.bottom.style = "hidden") %>%
-  apply_tbl_theme()
-
-# Render the table
-bcap_tbl
-
-```
-
-#### Distributions
-
-Distributions are presented below for the total score and each subscale:
-
-```{r bcap-distributions, class.source='fold', echo = FALSE}
-#Risk 
-p_bcap_risk <- complete %>%
-  composite_hist(
-    x = bcap_risk
-  ) +
-  labs(
-    title = 'Risk'
-  )
-
-# Happiness 
-p_bcap_happy <- complete %>% 
-  composite_hist(
-    x = bcap_happy,
-    bins = 5
-  ) +
-  labs(
-    title = 'Happiness'
-  )
-
-# Feelings
-p_bcap_pers <- complete %>% 
-  composite_hist(
-    x = bcap_feel_pers,
-    bins = 5
-  ) +
-  labs(
-    title = 'Feelings of Persecution'
-  )
-
-# Loneliness
-p_bacp_lonely <- complete %>% 
-  composite_hist(
-    x = bcap_lonely,
-    bins = 5
-  ) +
-  labs(
-    title = 'Loneliness'
-  )
-
-# Family Conflict
-p_bcap_fam_c<-complete %>% 
-  composite_hist(
-    x = bcap_fam_conf,
-    bins = 5
-  ) +
-  labs(
-    title = 'Family Conflict'
-  )
-
-# Rigidity
-p_bcap_rig <- complete %>% 
-  composite_hist(
-    x = bcap_rigid,
-    bins = 5
-  ) +
-  labs(
-    title = 'Rigidity'
-  )
-
-# Distress
-p_bcap_dis <- complete %>% 
-  composite_hist(
-    x = bcap_distress,
-    bins = 5
-  ) +
-  labs(
-    title = 'Distress'
-  )
-
-# Poverty
-p_bcap_prov <- complete %>% 
-  composite_hist(
-    x = bcap_poverty,
-    bins = 5
-  ) +
-  labs(
-    title = 'Poverty'
-  )
-
-# Lying
-p_bcap_lie <- complete %>% 
-  composite_hist(
-    x = bcap_lie,
-    bins = 5
-  ) +
-  labs(
-    title = 'Lying'
-  )
-    
-# Random Responding 
-p_bcap_rand <- complete %>% 
-  composite_hist(
-    x = bcap_random,
-    bins = 5
-  ) +
-  labs(
-    title = 'Random Responding'
-  ) 
-
-ggarrange(p_bcap_risk, p_bcap_happy + rremove("ylab"),
-          p_bcap_pers+ rremove("ylab"), p_bacp_lonely+ rremove("ylab"),
-          p_bcap_fam_c, p_bcap_rig+ rremove("ylab"),
-          p_bcap_dis+ rremove("ylab"), p_bcap_dis+ rremove("ylab"),
-          p_bcap_prov, p_bcap_lie+ rremove("ylab"),
-          p_bcap_rand+ rremove("ylab")
-          ) %>%
-  annotate_figure(top = text_grob( "Distribution for bcap Subscale \n(x-axis and y-axis are in different scales)"))
-```
 
 ## Dyadic Adjustment Scale (DAS)
 
@@ -3695,6 +3539,14 @@ Descriptive statistics are presented below for each item, total, and
 subscale score:
 
 ```{r eds-mean-items}
+eds <-
+  complete %>%
+  select(
+    matches(
+      "^elf"
+    )
+  )
+
 # Calculate the summary statistics for each variable
 eds_summary_data <- lapply(eds, function(x) {
   mean_val <- sprintf("%.2f", round(mean(x, na.rm = TRUE), 2))
@@ -3731,19 +3583,6 @@ eds_tbl
 
 ```
 
-#### Distributions
-
-Distributions are presented below for the total score and each subscale:
-
-```{r eds-distributions, class.source='fold', echo = FALSE}
-
-eds %>%
-  composite_hist(
-    x = elf_total
-  ) +
-  labs(title = "Distribution of Total Scores for the Stigma & Shame Questionnaire")
-
-```
 
 
 
@@ -5234,8 +5073,9 @@ To assess subjective socioeconomic status (SES), the MacArthur Scale of Subjecti
 
 -   Participants rated themselves 1-10 using the image of a ladder shown below, with higher numbers indicating greater subjective socioeconomic status.
 
-<Min, can you insert the ladder image here> 
-
+```{r ladder image, echo=FALSE, out.width = "10%", fig.align = "center"}
+knitr::include_graphics("ladder_image.jpg")
+```
 
 Reference:
 [adler1994socioeconomic](https://psycnet.apa.org/fulltext/1994-29613-001.pdf)
@@ -5315,12 +5155,12 @@ cint_ladder_data_subset <- complete %>%
 ## mean is showing 2 decimals per authors
 cint_ladder_summary_data <- lapply(cint_ladder_data_subset, function(x) {
   x <- replace(x, x < -40, NA)
-  # mean_val <- sprintf("%.2f", round(mean(x, na.rm = TRUE), 2))
-  # sd_val <- round(sd(x, na.rm = TRUE), 2)
+  mean_val <- sprintf("%.2f", round(mean(x, na.rm = TRUE), 2))
+  sd_val <- round(sd(x, na.rm = TRUE), 2)
   # range_val <- paste(min(x, na.rm = TRUE), max(x, na.rm = TRUE), sep = "-")
    miss_val <- round(mean(is.na(x)) * 100, 2)
   # c(Mean = mean_val, SD = sd_val, Range = range_val, Missing = paste(miss_val, "%", sep = ""))
-  c(Missing = paste(miss_val, "%", sep = ""))
+  c(Mean = mean_val, SD = sd_val, Missing = paste(miss_val, "%", sep = ""))
 })
 
 # Convert summary_data to a data frame
@@ -5337,7 +5177,7 @@ cint_ladder_tbl <- cint_ladder_summary_data %>%
   cols_label(`1` = "Variable",
              Missing = "% Missing") %>% 
   # cols_width(everything() ~ pct(100)) %>%
-  cols_align(columns = c("Missing"), align = "left")  
+  cols_align(columns = c("Missing"), align = "left") %>% 
   tab_options(table.border.bottom.style = "hidden") %>%
   apply_tbl_theme()
 
